--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-parallax": "^3.5.2",
     "react-toastify": "^11.0.2"
   },
   "devDependencies": {
